templates/standard_old/style/adm.css
html, body {}
.layout_header {padding: 8px 1em;background:#ffffff;}
.layout_header .left_logo {margin-top: 5px;margin-left: 10px;vertical-align:middle;}
.layout_colum_container{padding:1em;}

.layout_footer{background:#eeeeee; height:21px; font-size:90%;}
.layout_footer img{vertical-align:middle;}
.layout_footer #link{margin-top:3px;padding:3px 16px 4px;}
.layout_footer a{text-decoration:none;color:#777777;}
.layout_footer a:hover{text-decoration:underline;}
.layout_footer #link a.first{font-weight:bold;padding:0 6px 0 0;margin:0 3px 0 0;border-right:1px solid #777777;}
.layout_footer .copyright{position:relative;top:3px;right:16px;text-align: right;color:#777777;}
.layout_footer .ownedby{color:#777777;}

.directory_order_image {vertical-align:middle;margin-left:2px;}
#main_menu_container {border-top: 1px solid #cccccc;border-bottom: 1px solid #cccccc;}
#admin_box_login{margin:10em auto;width:40em;border:1px solid #cccccc;}
#admin_box_login div.form_login_ext{margin:1em 1em;}
#admin_box_login legend{display:none;}
/* dashboard */
.block_spacer{margin-bottom:20px;}
.block_spacer h3 {color:#003d6b; padding-bottom:6px; margin-bottom:10px;border-bottom:3px solid #eeeeee;text-transform:uppercase;}
.chart {margin:0 auto;width:80%;height:250px;}


/*
 * SmartMenus jQuery v1.0.1
 * http://www.smartmenus.org/
 *
 * Copyright Vasil Dinkov, Vadikom Web Ltd.
 * http://vadikom.com/
 *
 * Released under the MIT license:
 * http://www.opensource.org/licenses/MIT
 */


/* ADMIN MENU CSS */
/* Mobile first layout SmartMenus Core CSS (it's not recommended editing these rules)
-------------------------------------------------------------------------------------------*/
/*  CORE - PART DO NOT MODIFY */
.sm{position:relative;z-index:9999;}
.sm,.sm ul,.sm li{display:block;list-style:none;margin:0;padding:0;line-height:normal;direction:ltr;text-align:left;-webkit-tap-highlight-color:rgba(0,0,0,0);}
.sm-rtl,.sm-rtl ul,.sm-rtl li{direction:rtl;text-align:right;}
.sm>li>h1,.sm>li>h2,.sm>li>h3,.sm>li>h4,.sm>li>h5,.sm>li>h6{margin:0;padding:0;}
.sm ul{display:none;}
.sm li,.sm a{position:relative;}
.sm a{display:block;}
.sm a.disabled{cursor:not-allowed;}
.sm:after{content:"\00a0";display:block;height:0;font:0px/0 serif;clear:both;visibility:hidden;overflow:hidden;}
.sm,.sm *,.sm *:before,.sm *:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}

/*----------------------------------------------------------------------------------*/
.sm-forma {
  border-top: 2px solid var(--color-2);
  border-bottom: 1px solid var(--color-2);
  background: white;
}
.sm-forma a, .sm-forma a:hover, .sm-forma a:focus, .sm-forma a:active {
  padding: 13px 20px;
  /* make room for the toggle button (sub indicator) */
  padding-right: 58px;
  color: #333333;
  font-family: Arial, sans-serif;
  font-size: 14px;
  font-weight: normal;
  line-height: 17px;
  text-decoration: none;
}
.sm-forma a.current {
  font-weight: bold;
}
.sm-forma a.disabled {
  color: #cccccc;
}
.sm-forma a span.sub-arrow {
  position: absolute;
  top: 50%;
  margin-top: -17px;
  left: auto;
  right: 4px;
  width: 34px;
  height: 34px;
  overflow: hidden;
  font: bold 14px/34px monospace !important;
  text-align: center;
  text-shadow: none;
  background: rgba(141, 184, 99, 0.2);
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  border-radius: 4px;
}
.sm-forma a.highlighted span.sub-arrow:before {
  display: block;
  content: '-';
}

 .sm-forma a:hover {
    background: var(--color-2);
 }

.sm-forma li {
  border-top: 1px solid rgba(141, 184, 99, 0.2);
}
.sm-forma > li:first-child {
  border-top: 0;
}
.sm-forma ul {
  background: rgba(141, 184, 99, 0.2);
}
.sm-forma ul a, .sm-forma ul a:hover, .sm-forma ul a:focus, .sm-forma ul a:active {
  font-size: 14px;
  border-left: 8px solid transparent;
}
.sm-forma ul ul a,
.sm-forma ul ul a:hover,
.sm-forma ul ul a:focus,
.sm-forma ul ul a:active {
  border-left: 16px solid transparent;
}
.sm-forma ul ul ul a,
.sm-forma ul ul ul a:hover,
.sm-forma ul ul ul a:focus,
.sm-forma ul ul ul a:active {
  border-left: 24px solid transparent;
}
.sm-forma ul ul ul ul a,
.sm-forma ul ul ul ul a:hover,
.sm-forma ul ul ul ul a:focus,
.sm-forma ul ul ul ul a:active {
  border-left: 32px solid transparent;
}
.sm-forma ul ul ul ul ul a,
.sm-forma ul ul ul ul ul a:hover,
.sm-forma ul ul ul ul ul a:focus,
.sm-forma ul ul ul ul ul a:active {
  border-left: 40px solid transparent;
}

.nav-brand a {
  display: block;
  padding: 11px 10px 10px 20px;
  color: #333;
}
/* ... */

